@@ -1,3 +1,10 @@
+2007-02-09  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* Makefile.in, configure.in (CLEANFILES): correct cleanup handling
+	of pkgIndex.tcl and clarify when it should be in CLEANFILES,
+	CONFIG_CLEAN_FILES and/or BINARIES. [Bug 1655088]
+	* configure: Updated with TEA 3.6 changes
+
 2006-11-26  Daniel Steffen  <das@users.sourceforge.net>
 
 	* Makefile.in: add datarootdir for autoconf-2.60.
